# air-pollution-inteligent-system

./: .gitignore  Dockerfile  README.md  data.dvc  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflow/: main.yaml
.github/workflows/: auto_fetching_data.yml  data_pipeline.yml  fetching_data_pipeline.yml  preprocess_air_data.yml  run_data_test.yml  run_deploy.yml  run_test.yaml  train_model_pipeline.yml
data/processed/: processed_data.csv  processed_data_air_pollution.csv  processed_data_historical_weather.csv  processed_data_merged.csv
data/raw/weather/: raw_data_Mar-07-2023.json  (+9 more)
great_expectations/: great_expectations.yml  run_air_pollution_first_checkpoint.py  run_check_data_quality.py
great_expectations/checkpoints/: air_pollution_first_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  air_pollution_suite.json  old_air_pollution_suite.json
models/: model_air_pollution.pkl
notebooks/: check_data_quality.ipynb  train_model.ipynb
postman/: IPT_2_semester_IIS.postman_collection.json
reports/: data_report.html  data_stability.html  metrics.txt
src/client/: Dockerfile  README.md  main.go
src/data/: data_splitter.py  fetch_air_data.py  fetch_data.py  fetch_weather_history_data.py  merge_air_weather_data.py  process_air_data.py  process_weather_history_data.py
src/models/: predict_model.py  train_model.py
src/serve/: air_pollution_controller.py  prediction_controller.py  test_air_pollution_controller.py
src/test/: test_api.py
src/util/: cache_air_pollution.py  database_connector.py
(+3 files in other folders)
